--- a/Models/Omni/2025.09.29_MGM-Omni.md
+++ b/Models/Omni/2025.09.29_MGM-Omni.md
@@ -150,3 +150,230 @@ However, these systems still struggle with long-form speech generation.
 More recent efforts such as MOSS-TTSD[^Team2025Text] and Higgs-Audio-v2[^{Boson AI}2025Higgs] support expressive bilingual dialogue generation with personalized voice, yet challenges remain in maintaining timbre consistency over long sequences, ensuring real-time cross-modal fidelity, and achieving low latency.
 
 MGM-Omni addresses this issue via a chunk-based parallel decoding approach, enabling expressive long-form speech generation with consistent timbre and low latency.
+
+## 3·MGM-Omni
+
+\label{method}
+
+MGM-Omni is capable of processing text, images, video and speech, and can generate both textual and spoken outputs.
+
+To support high-quality, long-form speech synthesis without compromising the efficiency and effectiveness of omnimodal understanding and text generation, MGM-Omni decouples multimodal understanding and speech generation into two components: MLLM, serving as the "brain" for multimodal understanding and text generation, and SpeechLM, serving as the "mouth" for real-time speech generation.
+
+For input in different modalities, we employ modality-specific encoders to extract features, which are subsequently passed to the MLLM.
+
+The MLLM generates text tokens and passes them to SpeechLM, which produces speech tokens in real-time via a Chunk-Based Parallel Decoding strategy.
+
+These speech tokens are further converted into Mel-spectrograms through a flow-matching model~\citep {flow-matching}, and the final audio is synthesized using a vocoder.
+
+The overall framework is illustrated in Figure~[framework](#framework).
+
+![](figures/framework.pdf)
+
+<a id="framework">**The overview of MGM-Omni.**
+
+MGM-Omni decouples omni-modal understanding and speech generation into an MLLM and a SpeechLM.
+
+The MLLM processes text, images, video, and audio to produce text, while the SpeechLM generates speech from the MLLM's output in real time.</a>
+
+### Omni Understanding
+
+MGM-Omni is built upon Qwen2.5-VL[^Bai2025Qwen2.5-Vl], a state-of-the-art open-source Vision-Language Model (VLM) that supports image and video understanding with a native-resolution ViT[^Dehghani2023Patch].
+
+Based on Qwen2.5-VL, MGM-Omni attempts to extend towards Omni-Understanding, especially by incorporating audio understanding capabilities.
+
+\paragraph{Dual Audio Encoder.}
+
+MGM-Omni adopts a dual audio encoder design to capture both acoustic and semantic audio features.
+
+The primary encoder, Qwen2-Audio[^Chu2024Qwen2-Audio], is an audio encoder continually trained on Whisper-large-v3[^Radford2022Robust] for enhanced general sound perception. 
+To strengthen semantic understanding, especially for Chinese speech, we incorporate Belle-Whisper-large-v3[^BELLEGroup2023Belle], another Whisper-based encoder specialized in Chinese speech recognition.
+
+This dual encoder setup yields two complementary representations: the main audio feature $X_{\text{main}}$ and the auxiliary audio feature $X_{\text{aux}}$.
+
+\paragraph{Information Mining.}
+
+To effectively integrate these complementary features, we design an audio information mining approach inspired by Mini-Gemini[^Li2024Mini-Gemini].
+
+Specifically, $X_{\text{main}}$ serves as the query $Q\in\mathbb{R}^{N\times C}$, while $X_{\text{aux}}$ provides the key-value pair: $K\in\mathbb{R}^{N\times C}$ and $V\in\mathbb{R}^{N\times C}$, allowing the model to retrieve semantically relevant cues from $X_{\text{aux}}$ under the guidance of $X_{\text{main}}$.
+
+Formally, information mining can be defined as:
+
+$$
+T_A= {\mathrm {MLP}}(Q + {\mathrm {Softmax}}(\phi(Q) \times \phi(K)^\top) \times \phi(V)),
+$$
+
+where $\phi$ denotes a projection layer and MLP represents a multi-layer perceptron.
+
+This approach enhances the audio representation by making it both acoustically and semantically aware, yielding enhanced audio tokens $T_A$ for subsequent LLM processing.
+
+\paragraph{Training Strategy.}
+
+Following Lyra[^Zhong2024Lyra], we build a two-stage training pipeline to integrate audio understanding capabilities.
+
+In the first stage, we conduct audio-to-text pre-training to align the audio encoder to LLM.
+
+In the second stage, we perform unified omni-modal training.
+
+The first stage primarily uses audio transcription data, while the second stage comprises audio transcription, audio QA, audio-instruct VQA, and text instruction tuning data.
+
+This training strategy enables omni-cognition and robust cross-modal reasoning.
+
+\paragraph{Omni Length Understanding.}
+
+MGM-Omni aims to support both long and short sequence input.
+
+However, training with sequences of diverse lengths is inefficient: large batch sizes cause long sequence samples to run out of memory, while small sizes waste memory on short sequence samples.
+
+To address this issue, we propose a unified training pipeline.
+
+First, we group audio of similar lengths into the same batch.
+
+Second, we dynamically adjust the batch size, smaller for long-context inputs and larger for short-context inputs.
+
+This strategy significantly improves training efficiency.
+
+![](figures/speechlm.pdf)
+
+<a id="speechlm">**The overview of SpeechLM in MGM-Omni.**
+
+Conditioned on MLLM-generated text and the reference audio clip, SpeechLM generate speech with Chunk-based Parallel Decoding.</a>
+
+### Omni Generation
+
+MGM-Omni can generate both long-form text and speech.
+
+The textual output is autoregressively produced by the Omni-MLLM.
+
+The generated text, together with the personalize reference audio, is subsequently served as the conditioning for SpeechLM to synthesize speech via a Chunk-based Parallel Decoding method.
+
+The overall speech generation pipeline is depicted in Figure~[speechlm](#speechlm).
+
+\paragraph{Speech Generation.} 
+SpeechLM takes text tokens from Omni-MLLM as input and generates speech tokens in an autoregressive manner.
+
+It is initialized from the Qwen3[^Yang2025Qwen3] language model, with an additional TTS-Adapter appended to its output.
+
+TTS-Adapter consists of six randomly initialized Qwen3 blocks, designed to transform text representations into speech representations.
+
+The speech tokens produced by SpeechLM are then converted into Mel-spectrograms through a Flow-Matching model, and finally synthesized into audio via HiFi-GAN[^Kong2020Hifi-Gan] vocoder.
+
+We used the flow-matching model from CosyVoice2[^Du2024Cosyvoice], which supports chunk-aware streaming decoding.
+
+\paragraph{Speech Tokenizer.}
+
+We employ the CosyVoice2 finite scalar quantization~(FSQ) speech tokenizer to obtain discrete speech representations for speech generation.
+
+The tokenizer operates at a rate of 25 Hz, meaning that 25 tokens represent one second of audio.
+
+In comparison, humans typically express only two or three words per second.
+
+This discrepancy highlights that for a given utterance, the number of speech tokens is substantially larger than the number of text tokens.
+
+This leads to the following two issues:
+
+-  As the length of the speech increases, the gap between text and speech tokens widens, weakening their correlation and degrading the quality of long-form generation.
+
+-  The much higher number of speech tokens compared to text tokens slows inference and harms streaming efficiency.  
+
+To address these two challenges, we propose a Chunk-Based Parallel Decoding for efficient long-form speech generation.
+
+\paragraph{Chunk-based Decoding.}
+
+To improve text-speech alignment in long-form speech generation, we introduce Chunk-based Decoding for speech token generation.
+
+As shown in Figure~[chunking](#chunking), the input text is divided into smaller chunks that are sequentially processed by SpeechLM, with each chunk producing a corresponding speech segment. 
+During decoding, we adopt a token delay strategy: speech token generation within a chunk is initiated only after the first four text tokens, which are replaced by padding tokens in the speech sequence.
+
+This design ensures that every speech token is aligned with its corresponding text token while avoiding early mis-synchronization.
+
+By reducing the alignment distance between modalities, Chunk-based Decoding enhances cross-modal correspondence and improves the robustness of long-form speech synthesis.
+
+In contrast to naive segmentation methods, our approach preserves both the previously generated text and speech as context, thereby maintaining global fluency and coherence in the final output.
+
+Notably, Chunk-based Decoding is highly compatible with our dual-track "brain-mouth" design, preserving omnimodal understanding and text generation speed while improving speech synthesis quality.
+
+![](figures/chunk.pdf)
+
+<a id="chunking">**Decoding comparison.**
+
+Chunk-based decoding narrows the gap between text and corresponding speech, enabling long-form speech generation.</a>
+
+\paragraph{Parallel Decoding.}
+
+To improve efficiency, we introduce a parallel decoding strategy for efficient speech token generation.
+
+Specifically, we extend the vocabulary so that SpeechLM can decode both modalities in a single step.
+
+Let $V_{\text{text}}$ denote the text vocabulary, $V_{\text{speech}}$ denote the speech tokenizer vocabulary, and $k$ denote the parallel size.
+
+The extended vocabulary size is thus defined as:
+
+$$
+|V| = |V_{\text{text}}| + k |V_{\text{speech}}|.
+$$
+
+For speech tokenization, the input for each decoding step $t$ consists of one text token $x_t$ and $k$ speech tokens $\{s_t^1, s_t^2, \dots, s_t^k\}$.
+
+We use $f(\cdot)$ to denote the embedding function, and the hidden features $h_{t}^{\text{in}}$ for LLM input can be averaged as:
+
+$$
+h_{t}^{\text{in}} = \frac{1}{k+1} \left( f(x_t) + \sum_{i=1}^{k} f(s_t^i) \right).
+$$
+
+For speech detokenization, we employ a TTS-Adapter to project the LLM output hidden state $h_{t}^{\text{out}}$ into the speech representation space, after which the lm\_head predicts the next set of speech tokens:
+
+$$
+\{\hat{s}_{t+1}^1, \dots, \hat{s}_{t+1}^k\} = \text{lm\_head}\!\left(\text{TTS-Adapter}(h_{t}^{\text{out}})\right).
+$$
+
+While parallel decoding is commonly used with RVQ speech tokenizers[^Xie2024Mini-Omni], [^Team2025Text], it is rarely applied to FSQ speech tokenizers.
+
+We found that using parallel decoding with FSQ speech tokenizers not only maintains speech synthesis performance but also significantly improves efficiency.
+
+Additionally, it further shortens the distance between text and speech tokens, enhancing their correlation.
+
+### Omni Voice
+
+MGM-Omni is capable of generating long-form speech in any personalized voice.
+
+To enable this capability, we carefully designed both the data pipeline and the training strategy.
+
+\paragraph{Training Data.}
+
+To enable zero-shot voice cloning, we collected a large-scale dataset, including around 300k hours of raw speech data and approximately 100k hours of TTS-synthesized speech in Chinese and English.
+
+The raw speech portion of our corpus incorporates diverse open-source datasets, including Emilia Dataset[^He2024Emilia], Libri-heavy[^Kang2024Libriheavy], Common Voice[^Ardila2019Common], and Aishell series[^Bu2017Aishell-1], [^Du2018Aishell-2], [^Shi2020Aishell-3].
+
+We constructed a dataset for TTS synthesis by sampling Chinese conversations from Belle-10M[^BELLEGroup2023Belle] and English conversations from Lamini-Instruct[^Wu2023LaMini-Lm].
+
+We uniformly sampled 900k Chinese and 700k English conversations based on length.
+
+As these datasets are somewhat outdated, we enhanced the text quality by regenerating all responses using Qwen2.5-72B[^Yang2025Qwen2.5].
+
+Subsequently, we synthesized audio from these refined conversations using megatts3[^Jiang2025Sparse].
+
+For each sample, we randomly select a reference voice from the provided set of pre-processed reference audio.
+
+\paragraph{Pre-training.}
+
+The SpeechLM consists of a pre-trained Qwen3[^Yang2025Qwen3]
+
+LLM paired with a randomly initialized TTS-Adapter.
+
+The model is trained to generate speech from given text and reference audio through a next speech token prediction objective.
+
+The goal of the pre-training stage is to align the speech and text modalities.
+
+At this stage, the parameters of the pre-trained Qwen3 LLM remain frozen, while only the TTS-Adapter is updated.
+
+Both raw and synthesized speech data are leveraged in pre-training to ensure robustness across diverse speaker timbres.
+
+\paragraph{Post-training.}
+
+The post-training phase aims to enhance SpeechLM's capacity for fluent and accurate speech generation.
+
+During this phase, the parameters of both the LLM and the TTS-Adapter are jointly optimized with different learning rates.
+
+The TTS-Adapter is trained at a rate five times higher than that of the LLM.
+
+The training corpus is primarily composed of high-fidelity TTS-synthesised speech, supplemented with a smaller portion of raw speech data.
